# pico-temp-fan

./: .gitmodules  CMakeLists.txt  README.md  lcd.c  lcd.h  main.c  main.cpp
include/: buzzer.h  dht_handler.h  fan_control.h  rgb_led.h  utils.h
src/: buzzer.c  dht_handler.c  fan_control.c  fan_test.c  main.c  rgb_led.c  utils.c
